--- a/main_app/templates/main_app/sidebar_template.html
+++ b/main_app/templates/main_app/sidebar_template.html
@@ -298,7 +298,7 @@
                 {% elif request.user.user_type == '2' %}
                 <!-- Brand Logo -->
                 <a href="#" class="brand-link">
-                    <img src="{% static 'dist/img/virusx.png' %}" alt="AdminLTE Logo"
+                    <img src="{% static 'dist/img/virusx.jpg' %}" alt="AdminLTE Logo"
                         class="brand-image " style="opacity: .8">
                     <span class="brand-text font-weight-light">CEC Staff Panel</span>
                 </a>
@@ -440,7 +440,7 @@
                             <!-- Brand Logo -->
                             <a href="" class="brand-link">
 
-                                <img src="{% static 'dist/img/virusx.png' %} " alt="AdminLTE Logo"
+                                <img src="{% static 'dist/img/virusx.jpg' %} " alt="AdminLTE Logo"
                                     class="brand-image " style="opacity: .8">
                                 <span class="brand-text font-weight-light">CEC Student Panel</span>
                             </a>
